redesign entrance page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <!-- //Autocomplt -->
   <link rel="stylesheet" href="https://rawgit.com/LeaVerou/awesomplete/gh-pages/awesomplete.css" />
+  
   <script src="https://rawgit.com/LeaVerou/awesomplete/gh-pages/awesomplete.min.js" async></script>
 
   <!--
@@ -23,7 +24,7 @@
   <!-- Material -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-
+  <link href="https://fonts.googleapis.com/css?family=Calligraffitti" rel="stylesheet">
   <title>BeOurGuest</title>
 </head>
 
